# SKY-e-commerce-project-OOP

./: main.py  pyproject.toml
classes/: MixinInfo.py  abs_Base_Product.py  class_Cat_Grass.py  class_Cat_Smartphone.py  class_Category.py  class_Product.py
src/: utils.py
tests/: conftest.py  test_class_Category.py  test_class_Product.py  test_main.py  test_utils.py
